# stacklimit

./: .git-blame-ignore-revs  .pre-commit-config.yaml  README.md  pyproject.toml  showfunc.py  stacklimit.py
stacklimit/: __init__.py  datastructure.py  main.py  output.py  stacklimit.py
stacklimit/patterns/: __init__.py  aarch64.py  arm.py  base.py  x86.py  x86_64.py
stacklimit/test/: test.sh
test/: dep-aarch64  dep-arm  dep-x86_64  dep.c  test.sh
tests/: dep.c  test_datastructure.py  test_output.py
tests/component/: bubble_sort.c  generate-recursion.sh  misc.sh  none_sense.c  none_sense.sh  none_sense_call_stacks.txt  recursion.sh
tests/patterns/: __init__.py  test_base.py  test_x86.py  test_x86_64.py
